# advanced-SOC-Copilot-

./: .env.example  .gitignore  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  FIX_SUMMARY.md  Launch_SOC_Copilot.bat  Launch_SOC_Copilot.vbs  Makefile  QUICK_START.md  README.md  generate_ppt.py  install_desktop_launcher.ps1  launch_ui.py  pyproject.toml  requirements-dev.txt  requirements.txt  soc_copilot.spec  test_end_to_end.py  test_out.txt  test_output.txt  test_pipeline.py  test_vt_integration.py  test_vt_output.txt  verify_fixes.py  ~$SOC_Copilot_Presentation.pptx
config/ingestion/: system_logs.yaml
data/models/: model_hashes.json
data/models_backup/: README.md  feature_order.json  isolation_forest_v1.joblib  label_map.json  random_forest_v1.joblib
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IJIRT_Research_Paper.md  SOC_Copilot_BTech_Project_Report.docx  SOC_Copilot_BTech_Project_Report_v2.docx  SOC_Copilot_IJIRT_Paper_v2.docx  SOC_Copilot_IJIRT_Research_Paper.docx  Team_Contributions.md  UML_Diagrams.md  ~$C_Copilot_BTech_Project_Report_v2.docx  ~$C_Copilot_IJIRT_Paper_v2.docx  ~WRL3725.tmp
docs/presentations/: SOC-Copilot_Review-2_PPT.pptx  SOC_Copilot_Presentation.pptx  SOC_Copilot_Review1_Presentation.pptx
docs/sprints/: ANALYST_QUICK_REFERENCE.md  DASHBOARD_V030_FIXES.md  DASHBOARD_ZONES_IMPLEMENTATION.md  DEDUPLICATION_QUICK_REF.md  PATCH_BENIGN_DEDUPLICATION.md  PRODUCTION_READINESS_COMPLETE.md  PRODUCTION_READINESS_IMPROVEMENTS.md  SPRINT17_COMPLETE.md  UI_ARCHITECTURE.md  UI_OPTIMIZATION_EXECUTIVE_SUMMARY.md  UI_OPTIMIZATION_SUMMARY.md
installer/: installer.iss
models/text_log_classifier/: text_log_classifier.py
scripts/: build_exe.py  build_installer.py  generate_ppt.py  train_text_log_model.py
scripts/utils/: generate_project_report_part1.py  generate_project_report_part2.py  generate_research_paper.py  generate_uml_diagrams.py  validate_permissions.py  verify_improvements.py  verify_production_readiness.py
src/soc_copilot/: pipeline.py
tests/unit/: test_security_hardening.py
(+34 files in other folders)
